# adearn

./: manage.py  pyproject.toml
accounts/: admin.py  context_processors.py  mixins.py  models.py  urls.py  views.py
adearn/: asgi.py  settings.py  urls.py  wsgi.py
article/: admin.py  forms.py  models.py  signals.py  urls.py  views.py
article/tests/: factories.py  test_articles.py
static/css/: style.css  style.scss
templates/: account_detail.html  article_confirm_delete.html  article_detail.html  article_form.html  article_list.html  base.html  home.html  login.html  notification_list.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  register.html
